# ciut-tablero

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  calc_test.ipynb  download_kmzs.ipynb  draft.ipynb  index.html  main.py  postBuild  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
data/: dipsoh_cuencas.geojson  dipsoh_cuencas.parquet  dipsoh_cuencas.qmd
notebooks/: calc_test.ipynb  dash_draft.ipynb  download_kmzs.ipynb  draft.ipynb  exposicion.ipynb
tutorials/: exposicion.ipynb  peligrosidad.ipynb
tutorials/data/: Radios 2010 v2025-1.parquet  dipsoh_cuencas.parquet  dipsoh_cuencas.qmd
tutorials/espanol/: exposicion.ipynb
utils/: auth.py  cache.py  ee_utils.py  etl.py  timeseries_etl.py
