[project]
name = "ciut-tablero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fiona>=1.10.1",
    "geemap>=0.35.3",
    "geopandas>=1.0.1",
    "google-cloud-storage>=3.1.0",
    "ipykernel>=6.29.5",
    "pip>=25.0.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "radon>=6.0.1",
    "seaborn>=0.13.2",
    "setuptools>=78.1.0",
    "streamlit>=1.44.1",
    "vulture>=2.14",
]
