[project]
name = "ciut-tablero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fiona>=1.10.1",
    "geemap>=0.35.3",
    "geopandas>=1.0.1",
    "google-cloud-storage>=3.1.0",
    "ipykernel>=6.29.5",
    "mapclassify>=2.8.1",
    "numba>=0.61.2",
    "pip>=25.0.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "radon>=6.0.1",
    "rasterio>=1.4.3",
    "rioxarray>=0.19.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "setuptools>=78.1.0",
    "streamlit>=1.44.1",
    "vulture>=2.14",
    "joblib>=1.3.2",
    "ml4floods>=1.0.1",
    "owslib>=0.33.0",
    "cartopy>=0.24.1",
    "xee>=0.0.20",
    "localtileserver>=0.10.6",
    "datashader>=0.18.1",
    "contextily>=1.6.2",
    "boto3>=1.38.20",
    "obstore>=0.6.0",
    "s2sphere>=0.2.5",
    "duckdb>=1.3.0",
    "rasterstats>=0.20.0",
]
